--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -18,6 +18,10 @@ def keystorePropertiesFile = project.file("key.properties")
 def keystoreProperties = new Properties()
 keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
+def gitTag = 'git describe --tags --abbrev=0'.execute([], project.rootDir).text
+gitTag = gitTag.isEmpty() ? "" : gitTag.split("/")[1].trim()
+def gitCommitCount = Integer.parseInt('git rev-list --count HEAD'.execute([], project.rootDir).text.trim())
+
 android {
     compileSdkVersion 27
 
@@ -29,8 +33,8 @@ android {
         applicationId "com.swarmnyc.catstv"
         minSdkVersion 16
         targetSdkVersion 27
-        versionCode 1
-        versionName "1.1"
+        versionCode gitCommitCount
+        versionName gitTag
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
@@ -42,6 +46,13 @@ android {
             storePassword keystoreProperties['storePassword']
         }
     }
+
+    applicationVariants.all { variant ->
+        variant.outputs.all {
+            outputFileName = "catstv-${variant.name}-v${variant.versionName}.apk"
+        }
+    }
+
     buildTypes {
 
         release {
